# ReRag

./: .env  .env_example  .gitignore  ARCHITECTURE.md  BENCHMARK_DYNAMIC_ADAPTER_FIX.md  BENCHMARK_OPTIMIZATION_GUIDE.md  CLI_REFERENCE.md  DYNAMIC_ADAPTER_BENCHMARKS.md  Dockerfile  PROJECT_COMPLETION_SUMMARY.md  README.md  analyze_linking.py  bedrock.py  benchmark.py  benchmark_optimization_results.csv  benchmark_optimization_results_summary.csv  config.py  config.yml  debug_adapter.py  debug_metadata.py  debug_sparse.py  deepdocs.yml  docker-compose.yml  download_datasets.py  embeddings.py  inspect_vectors.py  main.py  mongodb_utils.py  process_dataset.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  retriever_test.py  semantic_search_demo.py  streamlit_app.py  test_adapter_qa.py  test_answer_retrieval.py  test_full_retriever_pipeline.py  test_optimization_results.yml  (+1 more)
agent/: README.md  graph.py  graph_refined.py  graph_self_rag.py  schema.py
benchmark/: benchmark.py  embeddings.py  mongodb_utils.py  test_aws_connection.py
benchmark_scenarios/: TEMPLATE_self_contained.yml  dense_baseline.yml  dense_high_precision.yml  dense_high_recall.yml  dense_only_no_reranker.yml  hybrid_advanced.yml  hybrid_reranking.yml  hybrid_retrieval.yml  hybrid_weighted.yml  quick_test.yml  sparse_bm25.yml
benchmarks/: CV_SPLIT_USAGE_EXPLAINED.md  README.md  __init__.py  autorag_bandit_optimizer.py  benchmark_contracts.py  benchmark_optimizer.py  benchmarks_adapters.py  benchmarks_metrics.py  benchmarks_runner.py  compare_rag_vs_baseline.py  experiment1.py  experiment3.py  (+19 more)
(+252 files in other folders)
