[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "Modular RAG system with hybrid retrievers and Bedrock integration"
authors = ["Spiros <spyrchat@ece.auth.gr>"]
readme = "README.md"
packages = [{ include = "embedding" }, { include = "database" }, { include = "playground" }, { include = "processors" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
langchain-core = "^0.1.46"
langchain-community = "^0.0.29"
langchain-qdrant = "^0.1.5"
qdrant-client = "^1.8.1"
sentence-transformers = "^2.6.1"
boto3 = "^1.34.90"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
uuid = "^1.30"  # optional if using uuid.UUID generation

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
